# maudio

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
crates/maudio/: Cargo.toml  README.md
crates/maudio-sys/: Cargo.toml  README.md  build.rs
crates/maudio-sys/native/: miniaudio.c  miniaudio_version_check.c
crates/maudio-sys/src/: lib.rs
crates/maudio-sys/src/pregen_bindings/: unix.rs  windows.rs
crates/maudio/examples/: 001_play_sound.rs  002_sound_engine_builder.rs  003_sound_builder.rs  004_multiple_sounds.rs  004_play_sound_group.rs  005_set_start_stop.rs  006_embed_file.rs  007_sound_end_notif.rs  008_node_to_graph.rs  009_play_waveform.rs  010_sound_async_fence.rs  011_sound_seek.rs  012_play_sound_group.rs  013.simple_sound_spatialization.rs  013_simple_sound_spatialization.rs  014_sound_group_mixing.rs  015_sound_pool.rs  016_decoder_from_file.rs  101_engine_state_cb.rs  102_engine_proc_notif.rs  103_engine_proc_cb.rs  104_VU_meter.rs  105_read_pcm_frames.rs  106_engine_record_to_file.rs  107_engine_sound_playlist.rs  108_engine_node_playlist.rs  109_splitter_node.rs  110_gain_node.rs  201_device_playback.rs  202_device_dsp.rs  203_device_record.rs  README.md
crates/maudio/src/: backend.rs  context.rs  data_source.rs  device.rs  encoder.rs  engine.rs  lib.rs  notifier.rs  pcm_frames.rs  resampler.rs  sound.rs  test_assets.rs
crates/maudio/src/audio/: channels.rs  formats.rs  mod.rs  performance.rs  sample_rate.rs  stream.rs  wave_shape.rs  waveform.rs
crates/maudio/src/audio/converters/: mod.rs  resampler.rs
crates/maudio/src/audio/dsp/: biquad_filter.rs  bpf2_filter.rs  bpf_filter.rs  delay_effect.rs  delay_filter.rs  fader.rs  hishelf2_filter.rs  hpf1_filter.rs  hpf2_filter.rs  hpf_filter.rs  loshelf2_filter.rs  lpf1_filter.rs  lpf2_filter.rs  lpf_filter.rs  mod.rs  notch2_filter.rs  pan.rs  peak2_filter.rs  spatializer.rs  stereo_panner.rs  volume_gainer.rs
crates/maudio/src/audio/math/: mod.rs  vec3.rs
crates/maudio/src/audio/spatial/: attenuation.rs  cone.rs  handedness.rs  mod.rs  positioning.rs
crates/maudio/src/context/: backend.rs
crates/maudio/src/data_source/: data_source_builder.rs  data_source_chain.rs  data_source_vtable.rs  pcm_source.rs
crates/maudio/src/data_source/sources/: buffer.rs  decoder.rs  mod.rs  noise.rs  pcm_ring_buffer.rs  pulsewave.rs  ring_buffer.rs  waveform.rs
crates/maudio/src/device/: device_builder.rs  device_cb_notif.rs  device_id.rs  device_info.rs  device_state.rs  device_type.rs
crates/maudio/src/engine/: engine_builder.rs  engine_cb_notif.rs  engine_host.rs  node_graph.rs  process_cb.rs  process_notifier.rs  resource.rs
crates/maudio/src/engine/engine_host/: enginehost_builder.rs  sound_handle.rs  soundgroup_handle.rs
crates/maudio/src/engine/node_graph/: node_builder.rs  node_flags.rs  (+5 more)
crates/maudio/src/sound/: data_source.rs  notifier.rs  sound_builder.rs  sound_flags.rs  sound_group.rs
crates/maudio/src/util/: device_notif.rs  fence.rs  mod.rs  pcm_frames.rs  proc_notif.rs  prof_notif.rs  s24.rs
(+41 files in other folders)
