[package]
name = "maudio-sys"
links = "miniaudio"
version = "0.1.0"
license = "MIT"
rust-version = "1.85"
edition = "2021"
build = "build.rs"
categories = ["multimedia::audio", "multimedia"]

[features]
default = []
generate-bindings = ["dep:bindgen"]

[build-dependencies.bindgen]
version = "0.72.1"
optional = true

[build-dependencies]
cc = "1.2.51"

[dependencies]
