[package]
name = "maudio-sys"
links = "miniaudio"
version = "0.1.1"
license = "MIT"
rust-version = "1.64" # oldest toolchain required by cc 1.2.51. Bindgen 0.72.1 requires 1.70
edition = "2021"
build = "build.rs"
repository = "https://github.com/someotherself/maudio"
description = "Raw miniaudio bindings for the maudio crate"
categories = ["multimedia::audio", "multimedia"]

[features]
default = []
generate-bindings = ["dep:bindgen"]
vorbis = []

[build-dependencies.bindgen]
version = "0.72.1"
optional = true

[build-dependencies]
cc = "1.2.51"

[dependencies]
