[package]
name = "maudio"
version = "0.1.0"
license = "MIT"
rust-version = "1.70" # oldest toolchain required by bindgen 0.72.1
edition = "2021"
categories = ["multimedia::audio", "multimedia"]

[features]
ci-tests = [] # disable the backend for the github CI
engine_host = [] # enables a thread safe engine instance with spawn()

[dependencies]
maudio-sys = { path = "../maudio-sys"}