[package]
name = "maudio"
version = "0.1.0"
license = "MIT"
rust-version = "1.64" # oldest toolchain required by cc 1.2.51. Bindgen 0.72.1 requires 1.70
edition = "2021"
descripion = "Rust bindings to the miniaudio library"
categories = ["multimedia::audio", "multimedia"]

[features]
ci-tests = [] # disable the backend for the github CI
engine_host = [] # enables a thread safe engine instance with spawn()

[dependencies]
maudio-sys = { version = "0.1.0", path = "../maudio-sys"}